--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,67 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "data-quality-sentry"
-version = "3.1.0"
-description = "Lightweight data quality checks with reports, safe fixes, and visualizations"
-authors = [{ name = "MacroAcon" }]
+name = "data-quality-sentry2"
+version = "0.2.0"
+description = "Configurable data validation for tabular data with interactive HTML reports and safe fixes."
+readme = "README.md"
 requires-python = ">=3.10"
+license = { text = "MIT" }
+authors = [{ name = "MacroAcon", email = "dnkykngcntry@gmail.com" }]
+keywords = ["data-quality", "validation", "pandas", "yaml", "cli", "reporting"]
+classifiers = [
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "License :: OSI Approved :: MIT License",
+  "Environment :: Console",
+  "Intended Audience :: Developers",
+  "Topic :: Software Development :: Quality Assurance",
+  "Topic :: Utilities"
+]
+
 dependencies = [
-    "pandas==2.2.1",
-    "numpy==1.26.4",
-    "jinja2==3.1.3",
-    "python-dateutil==2.9.0.post0",
-    "PyYAML==6.0.1",
+  "pandas>=2.2",
+  "numpy>=1.26",
+  "PyYAML>=6.0",
+  "Jinja2>=3.1",
+  "python-dateutil>=2.8"
+]
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=7.0",
+  "ruff>=0.3",
+  "mypy>=1.7",
+  "types-PyYAML>=6.0.12.12",
+  "types-python-dateutil>=2.9.0.20240316"
 ]
 
 [project.scripts]
 dqs = "dqs.cli:main"
 
-[build-system]
-requires = ["setuptools>=68", "wheel"]
-build-backend = "setuptools.build_meta"
+# --- Explicit setuptools config ---
+[tool.setuptools]
+package-dir = { "" = "." }
+packages = ["dqs"]   # Only install the 'dqs' package
+
+# --- Tooling ---
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = ["tests"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py310"
-select = ["E","F","I","UP"]
+target-version = "py311"
+extend-select = ["I"]
+exclude = ["data", "reports*", "examples"]
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.11"
 ignore_missing_imports = true
+warn_unused_configs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_return_any = false
+strict_optional = false
